# Results_Presentation

./: .env  .gitignore  Demo 2 Notes.txt  Demo-1-Steps.txt  Dockerfile  LICENSE.txt  README copy.md  README.md  database.db  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: test.yml
frontend/: README.md  package-lock.json  package.json
next_js_frontend/: .prettierrc.json  Dockerfile  README.md  components.json  package-lock.json  package.json  tailwind.config.ts
next_js_frontend/src/app/: globals.css  layout.tsx  page.tsx
next_js_frontend/src/app/(auth)/my-account/: page.tsx
next_js_frontend/src/app/(auth)/sign-in/: page.tsx
next_js_frontend/src/app/(auth)/sign-up/: page.tsx
next_js_frontend/src/app/about/: page.tsx
next_js_frontend/src/app/add-product/: page.tsx
next_js_frontend/src/app/add-test-result/: page.tsx
next_js_frontend/src/app/add-version/: page.tsx
next_js_frontend/src/app/products/: page.tsx
next_js_frontend/src/app/results/: page.tsx
next_js_frontend/src/app/support/: page.tsx
next_js_frontend/src/app/versions/: page.tsx
next_js_frontend/src/components/: AddProductButton.tsx  AddProductForm.tsx  AddTestResultButton.tsx  AddTestResultForm.tsx  AddVersionButton.tsx  AddVersionForm.tsx  FormCard.tsx  FormFieldWrapper.tsx  Logo.tsx  RegisterForm.tsx  SubmitButton.tsx  Temp.tsx  UserButton.tsx  available-courses.tsx  loginForm.tsx  logoutButton.tsx  mode-toggle.tsx  myAccount.tsx  navbar.tsx  navbarItem.tsx  productList.tsx  testResultsList.tsx  testResultsPieChart.tsx  versionList.tsx
next_js_frontend/src/components/ui/: button.tsx  card.tsx  combobox.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  mui_inpupt.tsx  pagination.tsx  sheet.tsx  sonner.tsx  toast.tsx  toaster.tsx
next_js_frontend/src/hooks/: AuthContext.tsx  use-toast.ts  useIsLoggedIn.tsx  useRegisterForm.tsx
next_js_frontend/src/lib/: constants.ts  types.ts
next_js_frontend/src/lib/api/: auth.ts
src/: database.db
src/app/: __about__.py  __init__.py  crud.py  dependencies.py  main.py
src/app/authentication/: auth.py  main.py  models.py
src/app/core/: auth.py  config.py  database.py
src/app/models/: products.py  test_categories.py  test_results.py  user.py  versions.py
src/app/routes/: __init__.py  _init_.py  products.py  test_categories.py  test_results.py  user.py  versions.py
src/app/schemas/: products.py  test_categories.py  test_results.py  user.py  versions.py
src/app/services/: products.py  test_categories.py  test_results.py  user.py  versions.py
tests/: main_test.py
